[package]
name = "plotters-piston"
version = "0.3.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Plotters Piston Window Backend"
homepage = "https://plotters-rs.github.io"
repository = "https://github.com/plotters-rs/plotters-piston.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.120.0"

[dependencies.plotters-backend]
git = "https://github.com/plotters-rs/plotters-backend"
# version = "0.3.1"

[dev-dependencies]
systemstat = "0.1.5"

[dev-dependencies.plotters]
default_features = false
features = ["ttf", "all_series"]
git = "https://github.com/plotters-rs/plotters"
# version = "0.3.1"
